--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-input-mask": "^3.0.6",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.24",
     "eslint": "^9.39.1",
